# job-ats-scrapers

./: .gitignore  README.md  career_page_scraper.py  linkedin_scraper.py  main.py  network_interceptor.py  oracle_cloud_scraper.py  schemas.py
Comeet/: New Text Document.txt  check_api_response.py  comeet_scraper.py  debug_job_details.py  discover_comeet_companies.py  discover_companies.py  test_api.py
LinkedIn-scraper/: README.md  ats_clients.py  ats_detector.py  ats_scraper.py  job_comparator.py  job_pipeline.py  linkedin_scraper.py  main.py  network_interceptor.py  run_example_tests.py  schemas.py  simple_test.py  test_pipeline.py  test_research.py  test_with_examples.py
breezy-job-scraper/: .env.example  DATABASE_MAPPING.md  PROJECT_STRUCTURE.md  README.md  breezy_hr_scraper.py  pyproject.toml  pytest.ini  requirements.txt
firma_system/: README.md  create_template.py  send_agreement.py
oracle-cloud-scraper/: README.md  oracle_cloud_scraper_output.json
recruitee/: README.md.txt  greatminds_ats_jobs.json
recruitee-scraper/: README.md  requirements.txt
recruitee-scraper/ats/recruitee/: schemas.py  scraper.py
recruitee-scraper/output/: recruitee_greatminds.json
smartrecruiter/: README.md  ats_jobs_schema.sql  example.py  final_test.py  schemas.py  scraper.py  test_ats_schema.py  test_scraper.py
